[gd_scene load_steps=25 format=2]

[ext_resource path="res://assets/Magic-Cliffs-Gamekit/Player Sprite/Sprites/run/run2.png" type="Texture" id=1]
[ext_resource path="res://assets/Magic-Cliffs-Gamekit/Player Sprite/Sprites/run/run3.png" type="Texture" id=2]
[ext_resource path="res://assets/Magic-Cliffs-Gamekit/Player Sprite/Sprites/idle/idle1.png" type="Texture" id=3]
[ext_resource path="res://assets/Magic-Cliffs-Gamekit/Player Sprite/Sprites/idle/idle2.png" type="Texture" id=4]
[ext_resource path="res://assets/Magic-Cliffs-Gamekit/Player Sprite/Sprites/idle/idle3.png" type="Texture" id=5]
[ext_resource path="res://assets/Magic-Cliffs-Gamekit/Player Sprite/Sprites/jump/jump1.png" type="Texture" id=6]
[ext_resource path="res://assets/Magic-Cliffs-Gamekit/Player Sprite/Sprites/jump/jump2.png" type="Texture" id=7]
[ext_resource path="res://assets/Magic-Cliffs-Gamekit/Player Sprite/Sprites/run/run4.png" type="Texture" id=8]
[ext_resource path="res://assets/Magic-Cliffs-Gamekit/Player Sprite/Sprites/fall/fall1.png" type="Texture" id=9]
[ext_resource path="res://assets/Magic-Cliffs-Gamekit/Player Sprite/Sprites/fall/fall2.png" type="Texture" id=10]
[ext_resource path="res://assets/Magic-Cliffs-Gamekit/Player Sprite/Sprites/run/run5.png" type="Texture" id=11]
[ext_resource path="res://assets/Magic-Cliffs-Gamekit/Player Sprite/Sprites/run/run8.png" type="Texture" id=12]
[ext_resource path="res://assets/Magic-Cliffs-Gamekit/Player Sprite/Sprites/jump/jump3.png" type="Texture" id=13]
[ext_resource path="res://assets/Magic-Cliffs-Gamekit/Player Sprite/Sprites/idle/idle4.png" type="Texture" id=14]
[ext_resource path="res://assets/Magic-Cliffs-Gamekit/Player Sprite/Sprites/run/run6.png" type="Texture" id=15]
[ext_resource path="res://src/character/Girl.gd" type="Script" id=16]
[ext_resource path="res://assets/Magic-Cliffs-Gamekit/Player Sprite/Sprites/run/run7.png" type="Texture" id=17]
[ext_resource path="res://assets/Magic-Cliffs-Gamekit/Player Sprite/Sprites/run/run1.png" type="Texture" id=18]
[ext_resource path="res://src/character/RootSwing.tscn" type="PackedScene" id=19]
[ext_resource path="res://assets/Sound/SFX_Vox_Female_Pain_Ouch.wav" type="AudioStream" id=20]
[ext_resource path="res://assets/Sound/SFX_Vox_Female_Attack.wav" type="AudioStream" id=21]
[ext_resource path="res://assets/Sound/running-on-dirt-path.mp3" type="AudioStream" id=22]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "fall",
"speed": 4.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 14 ) ],
"loop": true,
"name": "idle",
"speed": 4.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 13 ) ],
"loop": true,
"name": "jump",
"speed": 4.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 8 ), ExtResource( 11 ), ExtResource( 15 ), ExtResource( 17 ), ExtResource( 12 ) ],
"loop": true,
"name": "run",
"speed": 4.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 9.0
height = 18.0

[node name="Girl" type="KinematicBody2D"]
script = ExtResource( 16 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.8, 0.8 )
frames = SubResource( 1 )
animation = "run"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 21 )
shape = SubResource( 2 )

[node name="RootSwing" parent="." instance=ExtResource( 19 )]
position = Vector2( 0, 21 )

[node name="Camera" type="Camera2D" parent="."]
current = true

[node name="OuchPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )

[node name="JumpPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 21 )
volume_db = -13.0

[node name="StepPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 22 )
volume_db = -5.0

[connection signal="attach" from="RootSwing" to="." method="_on_RootSwing_attach"]
[connection signal="detach" from="RootSwing" to="." method="_on_RootSwing_detach"]
